Feed mockup sidan klar

--- a/project-pages/project-instagramflow.html
+++ b/project-pages/project-instagramflow.html
@@ -77,8 +77,8 @@
                         <div class="mockup-image">
                             <img src="../images/Grön-orange-Coffee-shop-feed.png" alt="Content Categories">
                             <div class="mockup-overlay">
-                                <h3>Content Categories</h3>
-                                <p>Strukturerade innehållskategorier för att skapa en balanserad innehållsmix.</p>
+                                <h3>Grön/Orange Coffee Shop Feed</h3>
+                                <p>Mockup-flöde för kafé med livfull grön och orange färgpalett, konsekvent design och tydlig placering av kampanjer och produkter.</p>
                                 <span class="view-more">Klicka för att se mer</span>
                             </div>
                         </div>
@@ -88,8 +88,8 @@
                         <div class="mockup-image">
                             <img src="../images/Mat-och-dryck.png" alt="Visual Theme">
                             <div class="mockup-overlay">
-                                <h3>Visual Theme</h3>
-                                <p>Färgpalett och visuella element som skapar en enhetlig varumärkesupplevelse.</p>
+                                <h3>Restaurang Feed</h3>
+                                <p>Mockup-flöde för restaurang med färgstark, lekfull palett och enhetlig design. Fokus på tydlig exponering av mat, dryck och kampanjer.</p>
                                 <span class="view-more">Klicka för att se mer</span>
                             </div>
                         </div>
@@ -99,8 +99,8 @@
                         <div class="mockup-image">
                             <img src="../images/Dollface-Beauty-kosmetikafeed.png" alt="Engagement Strategy">
                             <div class="mockup-overlay">
-                                <h3>Engagement Strategy</h3>
-                                <p>Strategiska inläggstyper designade för att öka engagemang och interaktion.</p>
+                                <h3>Dollface Beauty kosmetikafeed (Påhittat varumärke)</h3>
+                                <p>Mockup-flöde för Dollface Beauty med neutral färgpalett, visuell balans och fokus på ett lyxigt, enhetligt intryck.</p>
                                 <span class="view-more">Klicka för att se mer</span>
                             </div>
                         </div>
