--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,10 @@
         <section class="projects-grid">
             <article class="project-card fade-in">
                 <div class="project-image">
-                    <img src="images/project1.jpg" alt="Instagram Flow Projekt">
+                    <img src="images/thumbnail-feed.png" alt="Instagram Flow Projekt">
                 </div>
                 <div class="project-content">
-                    <h3>Instagram Flow Design</h3>
+                    <h3>Instagram Feed Design</h3>
                     <p>Ett visuellt sammanhängande Instagram-flöde skapat utifrån målgruppsanalys och varumärkesstrategi.</p>
                     <a href="project-pages/project-instagramflow.html" class="btn btn-outline">Läs mer</a>
                 </div>
