--- a/project-pages/project-instagramflow.html
+++ b/project-pages/project-instagramflow.html
@@ -53,7 +53,7 @@
                 <div class="grid-container">
                     <div class="mockup-item">
                         <div class="mockup-image">
-                            <img src="../images/Brun-beige-Coffee-shop-feed.png" alt="Brun/Beige Coffee Shop Feed">
+                            <img src="../images/Brun-beige-Coffee-shop-feed.png" alt="Brun/beige Coffee Shop Feed">
                             <div class="mockup-overlay">
                                 <h3>Brun/Beige Coffee Shop Feed</h3>
                                 <p>En översikt av det kompletta Instagram-flödet som visar den visuella harmonin mellan inläggen.</p>
