--- a/project-pages/project-instagramflow.html
+++ b/project-pages/project-instagramflow.html
@@ -64,7 +64,7 @@
 
                     <div class="mockup-item">
                         <div class="mockup-image">
-                            <img src="../images/autumn-coffee-shop.png" alt="Autumn Coffee Shop">
+                            <img src="../images/Hösttema-Coffee-shop.png" alt="Autumn Coffee Shop">
                             <div class="mockup-overlay">
                                 <h3>Hösttema Coffee Shop</h3>
                                 <p>Ett mysigt och inbjudande Instagram-flöde med hösttema skapat för ett kafé. Varm färgpalett, säsongserbjudanden och frestande bilder på kaffe och bakverk.</p>
@@ -75,7 +75,7 @@
 
                     <div class="mockup-item">
                         <div class="mockup-image">
-                            <img src="../images/green-orange-coffee-shop-feed.png" alt="Green/Orange Coffee Shop Feed">
+                            <img src="../images/Grön-orange-Coffee-shop-feed.png" alt="Green/Orange Coffee Shop Feed">
                             <div class="mockup-overlay">
                                 <h3>Grön/Orange Coffee Shop Feed</h3>
                                 <p>Mockup-flöde för kafé med livfull grön och orange färgpalett, konsekvent design och tydlig placering av kampanjer och produkter.</p>
