--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 
             <article class="project-card fade-in">
                 <div class="project-image">
-                    <img src="images/project2.jpg" alt="Marknadsundersökning">
+                    <img src="images/Abarnelogo.jpg" alt="Marknadsundersökning">
                 </div>
                 <div class="project-content">
                     <h3>Marknadsundersökning Abarne</h3>
