Det mesta fixat. mycket ändringar.

--- a/project-pages/project-abarne.html
+++ b/project-pages/project-abarne.html
@@ -220,5 +220,6 @@
 
     <script src="../scripts/effects.js"></script>
     <script src="../scripts/project-abarne.js"></script>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html> 
