--- a/project-pages/project-instagramflow.html
+++ b/project-pages/project-instagramflow.html
@@ -137,5 +137,6 @@
 
     <script src="../scripts/effects.js"></script>
     <script src="../scripts/project-pages.js"></script>
+    <script src="../scripts/menu.js"></script>
 </body>
 </html> 
