--- a/project-pages/project-abarne.html
+++ b/project-pages/project-abarne.html
@@ -42,7 +42,7 @@
             <div class="container">
                 <div class="project-description">
                     <h2 class="about-heading">Om Projektet</h2>
-                    <p>Detta projekt fokuserar på en djupgående marknadsundersökning för Abarne Sweden. Genom noggrann analys av målgruppen, konkurrenter och marknadstrender har jag utvecklat en omfattande strategi för företagets framtida utveckling.</p>
+                    <p>Detta projekt fokuserar på en djupgående marknadsundersökning för Abarne, ett café i Sverige. Genom noggrann analys av målgruppen, konkurrenter och marknadstrender har jag utvecklat en omfattande strategi för caféets framtida utveckling.</p>
                 </div>
             </div>
         </section>
