--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="project-content">
                     <h3>Marknadsundersökning Abarne</h3>
-                    <p>Omfattande marknadsundersökning och strategiutveckling för Abarne Sweden.</p>
+                    <p>Omfattande marknadsundersökning och strategiutveckling för Abarne, ett café i Sverige. Projektet inkluderar kundresor, moodboards och prisstrategier.</p>
                     <a href="project-pages/project-abarne.html" class="btn btn-outline">Läs mer</a>
                 </div>
             </article>
